# OS-LABS

./: README.md
laba1/: README.md  child.c  data.txt  parent.c
laba2/: README.md  main.c
laba3/: README.md  child.c  common.h  input.txt  parent.c
laba4/: CMakeLists.txt
laba4/contracts/: contract.h
laba4/lib_impl1/: impl1.c
laba4/lib_impl2/: impl2.c  impl2.h
laba4/program1_static/: main_static.c
laba4/program2_dynamic/: main_dynamic.c
laba4/utils/: utils.c  utils.h
